--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@ body {
     font-family: Arial, sans-serif;
   }
 h1 {
-    color: navy;
+    color: rgb(255, 255, 255);
     text-align: center;
   }  
